--- a/NEWS
+++ b/NEWS
@@ -104,6 +104,8 @@ See the end of the file for license conditions.
    - GAL_ARITHMETIC_OP_MAKENEW: new 'makenew' operator.
    - gal_blank_flag_remove: Remove all flagged elements in a dataset.
    - gal_blank_remove_rows: remove all rows that have at least one blank.
+   - gal_fits_hdu_datasum: calculate DATASUM of given HDU in given FITS file.
+   - gal_fits_hdu_datasum_ptr: calculate DATASUM of opened FITS file pointer.
    - gal_wcs_coverage: Return the sky coverage of given image HDU.
    - gal_wcs_dimension_name: return the name of the requested WCS dim.
 
