--- a/THANKS
+++ b/THANKS
@@ -72,6 +72,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Joseph Putko                         josephputko@gmail.com
     Samane Raji                          samaneraji@gmail.com
     Francois Ochsenbein                  francois.ochsenbein@gmail.com
+    Carlos Morales Socorro               cmorsoc@gmail.com
     Teymoor Saifollahi                   teymur.saif@gmail.com
     Joanna Sakowska                      js01093@surrey.ac.uk
     Elham Saremi                         saremi@ipm.ir
