CosmicCalculator: fix bug in calling --printparams
Until now, when CosmicCalculator was called with the '--printparams' or
'-P' option it aborted with an error about not setting the redshift. Whilst
the redshift value is not mandatory when the user is asking for checking
the configured parameters.

With this commit, a condition has been added on the check for redshifts at
the start of the program to let the program continue.

This fixes bug #59400.

--- a/NEWS
+++ b/NEWS
@@ -148,6 +148,7 @@ See the end of the file for license conditions.
   bug #59136: Makeprofiles with --replace is not thread-safe.
   bug #59155: Match cannot find the proper row when coordinates have NaN.
   bug #59371: MakeCatalog crash with clumps on non-contiguous object labels.
+  bug #59400: CosmicCalculator fails --printparams when redshift isn't given.
 
 
 
