--- a/THANKS
+++ b/THANKS
@@ -59,6 +59,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Floriane Leclercq                    floriane.leclercq@univ-lyon1.fr
     Alan Lefor                           alefor@astr.tohoku.ac.jp
     Sebastián Luna Valero                sluna@iaa.es
+    Alberto Madrigal                     brt.madrigal@gmail.com
     Guillaume Mahler                     guillaume.mahler@univ-lyon1.fr
     Raphael Morales                      rmorales@iaa.es
     Juan Molina Tobar                    juan.a.molina.t@gmail.com
