Book (astfits): example of using --asis to copy multiple keys
Until now, there was only a single example of using 'asis' for a single
keyword. However, in many scenarios, when its necessary to copy keywords,
there is more than one key.

With this commit, a small script example has been added showing how it is
possible to copy any number of keywords from one file to another.

This task was proposed by Javier Licandro.

--- a/THANKS
+++ b/THANKS
@@ -58,6 +58,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Martin Kuemmel                       mkuemmel@usm.lmu.de
     Floriane Leclercq                    floriane.leclercq@univ-lyon1.fr
     Alan Lefor                           alefor@astr.tohoku.ac.jp
+    Javier Licandro                      jlicandr@iac.es
     Sebastián Luna Valero                sluna@iaa.es
     Alberto Madrigal                     brt.madrigal@gmail.com
     Guillaume Mahler                     guillaume.mahler@univ-lyon1.fr
