Build: CPPFLAGS now includes built bootstrap directory
Until now, in the 'Makefile.am' of each program and the libraries,
'CPPFLAGS' was only looking into the bootstrapped source directory for
headers. However, after a recet bootstrap of Gnulib (where 'error.h' and
'argp.h' depended on 'stdio.h') in my normal test builds (where the source
and build directories are different) many compiler warnings suddenly popped
up, saying that ‘_GL_ATTRIBUTE_SPEC_PRINTF_SYSTEM’ is an unrecognized
format function type.

With the help of Paul Eggert and Bruno Haible from Gnulib, I found out that
the problem is that Gnulib's 'stdio.h' is actully a built file that is
customized for the running system. So its not in the source directory and
the compiler was actually using my OS's 'stdio.h'.

With this commit, to fix the problem, an explicit '-I' is now added to all
the 'AM_CPPFLAGS' of all the programs and libraries, telling them to first
look into the built bootstrap directory, then the source directory, and
finally Gnuastro's own library directory. This fixed all the warnings.

This bug would only happen when the source and build directories were
different. So it won't affect most users who just build in the source
directory.

--- a/THANKS
+++ b/THANKS
@@ -40,6 +40,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Alexey Dokuchaev                     danfe@freebsd.org
     Pierre-Alain Duc                     pierre-alain.duc@astro.unistra.fr
     Elham Eftekhari                      elhamea@iac.es
+    Paul Eggert                          eggert@cs.ucla.edu
     Gaspar Galaz                         ggalaz@astro.puc.cl
     Thérèse Godefroy                     godef.th@free.fr
     Madusha Gunawardhana                 gunawardhana@strw.leidenuniv.nl
